WebRTC: Sendonly streams + bundle is broken (regression)
Commit f8eef0ab fixed a bug with transport receive bin not being blocked properly during WebRTC start up, but introduced a problem where sendonly transceivers are never unblocked and data never starts flowing.
https://gitlab.freedesktop.org/gstreamer/gst-plugins-bad/blob/3ca87d998896f76b3d4ed62006f45f36a876de72/ext/webrtc/gstwebrtcbin.c#L3795 is the problematic line.
I think the correct fix is to remove the DROP mode from transport receive bin, as it makes things more complicated than they need to be. I think transport receive bin should either be in BLOCK mode for inactive transceivers, or PASS mode unconditionally for transceivers which have any active mlines with data flow in either (or both) directions.